Fixes #296, Whitespace failures will now be esier to understand.

--- a/src/html/_HTMLReporter.scss
+++ b/src/html/_HTMLReporter.scss
@@ -301,6 +301,8 @@ body {
     padding-top: $line-height;
 
     color: $text-color;
+    
+    white-space: pre;
   }
 
   .result-message span.result {
